--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "mongotest": "mongo_test.js"
+    "mongotest": "node mongo_test.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongo": "^0.1.0",
+    "mongodb": "^3.6.2",
     "mongoose": "^7.3.1",
     "nodemon": "^2.0.22"
   }
