--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Backend for Piggy Bank",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node .",
+    "dev": "nodemon .",
+    "install": "cd client && npm i",
+    "build": "cd client && npm run build",
     "mongotest": "node mongo_test.js"
   },
   "repository": {
@@ -20,6 +22,7 @@
   "homepage": "https://github.com/Rosshoven/Fullstack-Piggy-Bank#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongo": "^0.1.0",
     "mongodb": "^3.6.2",
